--- a/Lista02/conosco.html
+++ b/Lista02/conosco.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="img/Biopark-Educacao.svg">
+    <title>Trabalhe Conosco</title>
 </head>
 <body>
     <table width="100%">
         <tr>
           <td>
             <a href="index.html">
-              <img src="Biopark-Educacao.svg" alt="Logo Biopark" />
+              <img src="img/Biopark-Educacao.svg" alt="Logo Biopark" />
             </a>
           </td>
   
           <td  align="right" >
             <a href="sobre.html">Sobre o Biopark</a>
             <a href="invista.html">Invista</a>
-            <a href="empresa">Empresas</a>
+            <a href="empresas.html">Empresas</a>
             <a href="conosco.html">Trabalhe do Conosco</a>
           </td>
         </tr>
