--- a/Lista02/index.html
+++ b/Lista02/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="Biopark-Educacao.svg">
+    <link rel="icon" type="image/x-icon" href="img/Biopark-Educacao.svg">
     <title>Biopark Educacao</title>
   </head>
   <body>
@@ -12,21 +12,21 @@
       <tr>
          <td>
             <a href="index.html">
-          <img src="Biopark-Educacao.svg"  alt="Logo Biopark" />
+          <img src="img/Biopark-Educacao.svg"  alt="Logo Biopark" />
             </a>
          </td>
 
         <td align="right">
           <a href="sobre.html">Sobre o Biopark</a>
           <a href="invista.html">Invista</a>
-          <a href="empresa">Empresas</a>
+          <a href="empresas.html">Empresas</a>
           <a href="conosco.html">Trabalhe do Conosco</a>
         </td>
       </tr>
         
         <tr>
             <td colspan="2">
-                <img src="capa.webp" alt="Imagem de capa" width="100%">
+                <img src="img/capa.webp" alt="Imagem de capa" width="100%">
             </td>
         </tr>
 
