--- a/lista03/historia.html
+++ b/lista03/historia.html
@@ -19,8 +19,9 @@
         <a class="title" href="index.html"><h1 class="title">RODILINDO</h1></a>
         <div class="menu" align="right">
             <a href="index.html">Home</a>
+            <a href="historia.html">Historia</a>    
             <a href="titulos.html">Titulos</a>
-            <a href="imagens.html">Imagens</a>
+            
         </div>
     </div>
 
@@ -53,7 +54,7 @@
 
         Em 2018, recebeu o Troféu Mesa Redonda como o melhor lateral-direito do Campeonato Brasileiro daquele ano.
     </p>
-    <h2>Video HISTORICO do RODILINDO</h2>
+    <h2>Video HISTÓRICO do RODILINDO</h2>
     <div class="video" align="center">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/ZL4r-0lGWwk" title="YouTube video player"
             frameborder="0"
