--- a/lista03/titulos.html
+++ b/lista03/titulos.html
@@ -21,9 +21,10 @@
             <h1>RODILINDO</h1>
         </a>
         <div class="menu" align="right">
+            <a href="index.html">Home</a>
             <a href="historia.html">Historia</a>
             <a href="titulos.html">Titulos</a>
-            <a href="imagens.html">Imagens</a>
+            
         </div>
     </div>
     <div class="imagem">
@@ -32,30 +33,56 @@
 
     </div>
     <h2>TITULOS DA CARREIRA DE RODILINDO</h2>
-
-    <div class="logo">
-        <h2>Avaí</h2>
-        <img id="avai" src="img/avai.png" alt="">
+    <div class="box avai">
+        <div class="logo">
+            <h2>Avaí</h2>
+            <img id="avai" src="img/avai.png" alt="">
+        </div>
+        <p>
+        <ul class="text titulos">
+            <li>Campeonato Catarinense: 2012</li>
+        </ul>
+        </p>
     </div>
-    
-    <p>Campeonato Catarinense: 2012</p>
 
-    <h2>Flamengo</h2>
-    <p>
-        Copa Libertadores da América: 2019
-        Campeonato Brasileiro: 2019
-        Campeonato Carioca: 2017, 2019
-        Copa do Brasil: 2022
-    </p>
+    <div class="box flamengo">
+        <div class="logo">
+            <h2>Flamengo</h2>
+            <img id="flamengo" src="img/logo-flamengo-4096.png">
+            <p>
+        </div>
+        <div>
+            <ul class="text titulos">
+                <li>Copa Libertadores da América: 2019</li>
+                <li>Campeonato Carioca: 2017, 2019</li>
+                <li>Copa do Brasil: 2022</li>
+            </ul>
+            </p>
 
+        </div>
 
-    <h2>Premiações individuais</h2>
-    <p>
-        Seleção do Campeonato Carioca: 2016[17]
-        Troféu Mesa Redonda: Melhor lateral-direito do Campeonato Brasileiro de 2018[45]
-        Seleção do Campeonato Gaúcho: 2021</p>
+    </div>
 
-    </p>
+    <div class="box flamengo">
+        <div class="logo">
+            <h2>Premiações individuais</h2>
+            <img id="flamengo" src="img/OIP.jfif">
+            <p>
+        </div>
+        <div>
+            <ul class="text titulos">
+                <li>Seleção do Campeonato Carioca: 2016[17]</li>
+                <li>Troféu Mesa Redonda: Melhor lateral-direito do Campeonato</li>
+                <li>Brasileiro de 2018[45]</li>
+                <li>Seleção do Campeonato Gaúcho: 2021</li>
+
+            </ul>
+            </p>
+
+        </div>
+
+    </div>
+   
     <footer>
 
     </footer>
