--- a/lista03/index.html
+++ b/lista03/index.html
@@ -19,9 +19,10 @@
     <div class="header">
         <a class="title" href="index.html"> <h1 >RODILINDO</h1></a>
         <div class="menu" align="right">
+            <a href="index.html">Home</a>
             <a href="historia.html">Historia</a>
             <a href="titulos.html">Titulos</a>
-            <a href="imagens.html">Imagens</a>
+          
         </div>
     </div>
 
